--- a/views/home.ejs
+++ b/views/home.ejs
@@ -110,7 +110,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
 
       <div class="row mb-5">
         <div class="col-lg-6 col-md-6 col-12">
-          <img src="/public/images/kedarnath.jpeg" class="img-fluid">
+          <img src="/images/kedarnath.jpeg" class="img-fluid">
         </div>
         <div class="col-lg-6 col-md-6 col-12 mt-4 text-center">
           <h1 class="text-capitalize mb-2">Who am i ?</h1>
@@ -147,7 +147,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
       <div class="row text-center mb-5">
         <div class="col-lg-4 col-md-4 col-12 mb-5">
           <div class="card">
-            <img class="card-img-top" src="/public/images/trekking 101.jpg"  alt="Card image">
+            <img class="card-img-top" src="/images/trekking 101.jpg"  alt="Card image">
             <div class="card-body">
               <h4 class="card-title">Trekking</h4>
               <p class="card-text text-capitalize">Let's go for adventure</p>
@@ -157,7 +157,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
         </div>
         <div class="col-lg-4 col-md-4 col-12 mb-5">
           <div class="card">
-            <img class="card-img-top" src="/public/images/camping 101.jpg" alt="Card image"> 
+            <img class="card-img-top" src="/images/camping 101.jpg" alt="Card image"> 
             <div class="card-body">
               <h4 class="card-title">Camping</h4>
               <p class="card-text text-capitalize">Enjoying Camping with friend</p>
@@ -167,7 +167,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
         </div>
         <div class="col-lg-4 col-md-4 col-12 mb-5">
           <div class="card">
-            <img class="card-img-top" src="/public/images/rafting 102.jpg" alt="Card image"> 
+            <img class="card-img-top" src="/images/rafting 102.jpg" alt="Card image"> 
             <div class="card-body">
               <h4 class="card-title">Rafting</h4>
               <p class="card-text text-capitalize">thriller experience of rafting</p>
@@ -240,22 +240,22 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
         </div>
         <div class="row mx-auto">
           <div class="col-lg-4 col-md-2 col-12">
-            <img src="/public/images/kashmir.jpg" class="img-fluid">
+            <img src="/images/kashmir.jpg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-2 col-12 mb-4">
-            <img src="/public/images/man landsacp.jpeg" class="img-fluid">
+            <img src="/images/man landsacp.jpeg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-2 col-12 mb-4">
-            <img src="/public/images/image 101.jpg" class="img-fluid">
+            <img src="/images/image 101.jpg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-2 col-12 mb-4">
-            <img src="/public/images/image 102.jpg" class="img-fluid">
+            <img src="/images/image 102.jpg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-2 col-12 mb-4">
-            <img src="/public/images/kedarnath.jpeg" class="img-fluid">
+            <img src="/images/kedarnath.jpeg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-2 col-12 mb-5">
-            <img src="/public/images/man landsacp.jpeg" class="img-fluid">
+            <img src="/images/man landsacp.jpeg" class="img-fluid">
           </div>
     
     
