--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,7 +68,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
           </ul>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/images/image 101.jpg" alt="Los Angeles" width="1100" height="500">
+              <img src="images/image 101.jpg" alt="Los Angeles" width="1100" height="500">
               <div class="carousel-caption">
                 <h3>Los Angeles</h3>
                 <p>We had such a great time in LA!</p>
@@ -249,10 +249,10 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
             <img src="/images/image 101.jpg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-2 col-12 mb-4">
-            <img src="/images/image 102.jpg" class="img-fluid">
+            <img src="/images/man landsacp.jpeg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-2 col-12 mb-4">
-            <img src="/images/kedarnath.jpeg" class="img-fluid">
+            <img src="/images/kashmir.jpg" class="img-fluid">
           </div>
           <div class="col-lg-4 col-md-2 col-12 mb-5">
             <img src="/images/man landsacp.jpeg" class="img-fluid">
