--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,14 +68,14 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
           </ul>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/image 101.jpg" alt="Los Angeles" width="1100" height="500">
+              <img src="/public/images/image 101.jpg" alt="Los Angeles" width="1100" height="500">
               <div class="carousel-caption">
                 <h3>Los Angeles</h3>
                 <p>We had such a great time in LA!</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/image 102.jpg" alt="Chicago" width="1100" height="500">
+              <img src="public/images/image 102.jpg" alt="Chicago" width="1100" height="500">
               <div class="carousel-caption">
                 <h3>Chicago</h3>
                 <p>Thank you, Chicago!</p>
