--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -23,7 +23,7 @@
       
       <script>
         function goBack() {
-            window.location.href = "http://localhost:4000/"
+            window.location.href = "https://project-144.vercel.app/"
         }
       </script>
 </body>
